# excel-mcp-server

./: LICENSE  README.md  README_CN.md  pyproject.toml
docs/: TOOLS.md
src/excel_mcp/: __init__.py  excel_core.py  server.py
tests/: test_import.py  test_metadata.py  test_no_json_literals.py  test_server_schema.py
